# AI

./: .gitignore  .gitmodules  CLAUDE.md  README.md
.chat/: w2_instruction.md  w2_summary.md  w3_instruction.md  w3_summary.md
.claude/commands/: deep-code-review.md
.learning/: codex-prompt-analysis.md  codex-prompt-architecture.md  codex-prompt-system.md  codex-system-prompts.md  opencode-prompt-architecture.md  opencode-system-prompts.md
.opencode/: findings.md  opencode.json  progress.md  task_plan.md
.opencode/doc/plan/: 2026-03-21-llm-log-conversation-design.md  2026-03-21-llm-log-conversation-implementation.md  2026-03-21-llm-log-conversation-v2-implementation.md  2026-03-21-turn-isolation-design.md  2026-03-21-turn-isolation-implementation.md  2026-03-22-timeline-log-design.md  2026-03-22-timeline-log-implementation.md  2026-03-22-timeline-log-v2-design.md  2026-03-22-timeline-log-v2-implementation.md  2026-03-22-turn-index-fix-implementation.md  2026-03-22-turn-isolation-v2-design.md  2026-03-22-turn-isolation-v2-implementation.md
.opencode/plugin/: log-conversation.ts
.playwright-mcp/: query-export-1767977182152.csv  query-export-1767977200720.json
.specify/memory/: constitution.md
docs/plans/: 2026-02-07-raflow-design.md  2026-02-07-raflow-optimized-design.md  2026-03-21-llm-log-conversation-design.md  2026-03-22-llm-log-visualizer-design.md
llm-log-visualizer/: index.html  package.json
llm-log-visualizer/src/: App.css  App.tsx
llm-log-visualizer/src/components/: StatusBar.tsx  SystemPrompt.tsx  ToolCard.tsx
llm-log-visualizer/src/utils/: tokenizer.ts
project/code-review-agent/: package.json  tsconfig.json
project/code-review-agent/docs/: 2026-03-28-code-review-agent-design.md
project/code-review-agent/prompts/: system.md
project/code-review-agent/reviews/: 2026-03-28-master...HEAD.md  2026-03-28-review-report.md
project/code-review-agent/src/: index.ts
project/db_query/: Makefile  README.md  test_frontend.py
project/db_query/backend/: .env.example  README.md  pyproject.toml
project/db_query/backend/src/api/: __init__.py  dependencies.py  errors.py  main.py
project/db_query/backend/src/api/v1/: __init__.py  databases.py  metrics.py  queries.py
project/db_query/backend/src/core/: __init__.py  config.py  constants.py  logging.py  sql_parser.py  sqlite_db.py
project/db_query/backend/src/middleware/: performance.py  rate_limit.py
project/db_query/backend/src/models/: __init__.py  database.py  metadata.py  query.py
project/db_query/backend/src/services/: __init__.py  db_service.py  llm_service.py  metadata_service.py  metrics_service.py  query_service.py
project/db_query/backend/src/stubs/: slowapi.pyi
project/db_query/backend/tests/: conftest.py  test_utils.py
project/db_query/backend/tests/api/: test_dependencies.py  test_errors.py
project/db_query/backend/tests/services/: test_database_service_simple.py  test_metadata_service.py  test_query_service_simple.py  test_services_basic.py
project/llm-log-visualizer/: README.md  package-lock.json  package.json  vite.config.ts
project/raflow/: .env.example  .gitignore  README.md  RELEASE_NOTES.md  findings.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  progress.md  tailwind.config.js  task_plan.md  vite.config.ts
project/raflow/src/: App.tsx  (+3 more)
project/raflow/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
project/raflow/src-tauri/capabilities/: default.json  desktop-schema.json
project/raflow/src-tauri/icons/: icon.icns
project/raflow/src-tauri/src/: api_config.rs  commands.rs  lib.rs  main.rs  permissions.rs  system_tray.rs
project/raflow/src-tauri/src/audio/: capture.rs  capture_avaudio.rs  capture_avfoundation.rs  mod.rs  pipeline.rs  recorder.rs  resampler.rs
project/raflow/src-tauri/src/clipboard/: mod.rs
project/raflow/src-tauri/src/config/: mod.rs
project/raflow/src-tauri/src/debug/: mod.rs
project/raflow/src-tauri/src/injection/: accessibility.rs  clipboard.rs  mod.rs  smart_clipboard.rs
project/raflow/src-tauri/src/perf/: histogram.rs  metrics.rs  mod.rs
project/raflow/src-tauri/src/session/: mod.rs  recording.rs  session.rs  websocket_task.rs
project/raflow/src-tauri/src/transcription/: client.rs  language_config.rs  messages.rs  mod.rs  robust_client.rs  types.rs
project/raflow/src-tauri/tests/: accessibility_tests.rs  audio_recorder_tests.rs  clipboard_injection_tests.rs  debug_mode_tests.rs  e2e_integration_tests.rs  integration_tests.rs  language_config_tests.rs  permission_tests.rs  resampler_tests.rs  robust_client_tests.rs  scribe_client_tests.rs
project/simple-agent/: .env.example  .gitignore  README.md  findings.md  package-lock.json  package.json  progress.md  task_plan.md  tsconfig.json
specs/001-db-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-db-query/: refactoring_plan.md
specs/003-raflow/: 0001-spec.md  0002-design.md  0003-implementation.md  0004-performance-and-testing.md  0005-mvp-implementation-plan.md  README.md
specs/reviews/: db_query-deep-code-review.md  db_query-project-report.md  ultra_db_query-deep-code-review.md
(+205 files in other folders)
