[package]
name = "raflow"
version = "0.1.0"
edition = "2021"
description = "Real-time voice transcription tool"
authors = ["you"]

[lib]
name = "raflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
rubato = "0.14"
ringbuf = "0.3"
arboard = "3.4"
base64 = "0.22"
