[package]
name = "raflow"
version = "0.1.0"
edition = "2021"
description = "Real-time voice transcription tool"
authors = ["you"]

[lib]
name = "raflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-notification = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.17"
av-foundation = "0.2"
rubato = { version = "0.15", features = ["fft_resampler"] }
ringbuf = "0.4"
arboard = "3.4"
base64 = "0.22"
directories = "6.0"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
coreaudio-sys = "0.2"

[profile.release]
lto = true
opt-level = "s"
